test/files/neg/nested-class-shadowing.scala
// scalac: -Werror -Xlint:deprecation
//

trait Core {
  class Status
}

trait Ext extends Core {
  class Status extends super.Status
}
